--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,6 +5,10 @@
 // ABOUT
 // =====
 
+.About {
+  padding: 60px 0;
+}
+
 .About-GetInTouch {
   display: grid;
   list-style-type: none;
@@ -13,15 +17,15 @@
   grid-template-columns: auto auto auto;
 
   div {
-    span:first-child {
+    .icon {
       color: $primarycolor;
+      float: left;
     }
 
-    span {
-      width: 67%;
-      display: block;
-      margin: 0;
-      padding: 0;
+    .content {
+      span {
+        display: block;
+      }
     }
 
     .heading {
@@ -29,8 +33,14 @@
       color: $primarycolor;
       margin-top: 20px;
     }
-
-
   }
+}
 
+// ========
+// PROJECTS
+// ========
+
+#HomeProjects {
+  background-color: #eee;
+  padding: 60px 0;
 }
