--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ code {
 $primarycolor: #d9e021;
 $primarycolor2: #8e9437;
 $secondarycolor: #29abe2;
+$secondarycolor0: #77cedf;
 
 $borderradius1: 5px;
 $borderradius2: 12px;
@@ -78,22 +79,20 @@ h3 {
   font-size: 18pt;
 }
 
-p, span, a, h4 {
+p, span, a, h4, time {
   color: #666;
   margin: 10px 0;
   font-size: 14pt;
 }
 
-button, button:hover, button:focus, button:active {
+.button, .button:hover, .button:focus, .button:active {
   color: #fff;
   background: #D9E021;
-  padding: 10px;
-  font-size: 18px;
-  border-radius: 5px;
+  padding: 10px 15px;
+  border-radius: $borderradius1;
   text-decoration: none;
   transition: background 0.5s;
-  display: block;
-  margin-bottom: 20px;
+  margin: 20px 0px;
 
 }
 
@@ -146,8 +145,9 @@ button:hover, button:focus, {
 // ======
 
 #Footer {
-  position: fixed;
+  /*position: fixed;
   bottom: 0px;
+  */
   width: 100%;
   background-color: #333;
   color: #666;
