--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import './params.scss';
+
 body {
   margin: 0;
   padding: 0;
@@ -13,20 +15,6 @@ code {
     monospace;
 }
 
-/* === Breakpoints === */
-$device-xl: 1440px;
-$device-l: 1084px;
-$device-m: 880px;
-$device-s: 425px;
-
-$primarycolor: #d9e021;
-$primarycolor2: #8e9437;
-$secondarycolor: #29abe2;
-$secondarycolor0: #77cedf;
-
-$borderradius1: 5px;
-$borderradius2: 12px;
-
 
 // =======
 // GENERAL
@@ -38,10 +26,8 @@ $borderradius2: 12px;
   margin: 0px auto;
 }
 
-.HeroImage {
-  height: 450px;
-  padding: 50px 0px;
-  background-size: cover;
+.layout > header {
+  margin-bottom: 60px;
 }
 
 .LogoImage {
@@ -53,19 +39,21 @@ $borderradius2: 12px;
   max-width: 100%;
 }
 
+.HeroImage {
+  height: 200px;
+  padding: 50px 0px;
+  background-size: cover;
+}
 
 @media (max-width: 768px) {
   .HeroImage {
-    max-height: 400px;
+    max-height: 180px;
   }
 }
 
 @media (max-width: 375px) {
   .HeroImage {
-    max-height: 200px;
-  }
-  .LogoImage {
-    width: 150px;
+    max-height: 150px;
   }
 }
 
@@ -131,7 +119,7 @@ button:hover, button:focus, {
   float: right;
 
   ul {
-    list-style-image: none;
+    list-style-type: none;
   }
 
   li {
