--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -48,6 +48,7 @@
       margin: 0;
       justify-content: space-between;
       grid-template-columns: auto auto auto;
+      grid-auto-rows: 1fr;
 
       @media (max-width: $device-s) {
         grid-template-columns: auto;
@@ -113,6 +114,119 @@
   #HomeProjects {
     background-color: #eee;
     padding: 60px 0;
+
+
+    .project-header {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      
+      @media (max-width: $device-l) {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      @media (max-width: $device-m) {
+        grid-template-columns: 1fr;
+      }
+
+
+    
+      .project-video > div {
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+        overflow: hidden;
+        position: relative;
+
+        iframe {
+          position: absolute !important;
+          top: 0 !important;
+          left: 0 !important;
+          width: 100% !important;
+          height: 100% !important;
+        }
+      }
+
+      .project-text {
+        background-color: $secondarycolor;
+        padding: 20px;
+
+        span {
+          color: #fff;
+          font-size: 24pt;
+          display: block;
+
+          @media (max-width: $device-m) {
+            font-size: 18pt;
+          }
+        }
+
+        span.source {
+          font-size: 14pt;
+        }
+      }
+
+    }
+
+
+    .project-overview {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      grid-column-gap: 40px;
+      grid-row-gap: 40px;
+      margin: 40px 0;
+
+      @media (max-width: $device-m) {
+        grid-template-columns: auto auto auto;
+      }
+
+      @media (max-width: $device-s) {
+        grid-template-columns: auto auto;
+      }
+
+
+
+      .project-item {
+        position: relative;
+
+        > div {
+          border-radius: $borderradius1;
+        }
+      }
+
+      .project-overlay {
+        position: absolute;
+        top: 0;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: rgba(0,0,0,0.5);
+        transition: background-color 0.3s;
+
+        h4 {
+          font-size: 23pt;
+          position: absolute;
+          color: #fff;
+          width: 100%;
+          text-align: center;
+          top: 50%;
+          transform: translateY(-50%);
+
+        }
+      }
+
+      :hover {
+        .project-overlay {
+          background-color: rgba(0,0,0,0.25);
+        }
+      }
+
+    }
+
+
+
+    
   }
 
 
