fontawesome icon pseudo bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import './params.scss';
-@import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css"); /* FA CSS import */
+//@import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css"); /* FA CSS import */
 
 body {
   margin: 0;
@@ -102,7 +102,7 @@ button:hover, button:focus, {
   color: $primarycolor2
 }
 
-.icon-pseudo:before, .news-nav-next:after {
+.icon-pseudo:before, .icon-pseudo:after {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -117,16 +117,16 @@ button:hover, button:focus, {
 // ==========
 // LOGO IMAGE
 // ==========
-.LogoImage img {
+#LogoImage img {
   max-width: 100%;
 }
-.LogoImage {
+#LogoImage {
   width: 150px;
   float: left;
 }
 
 @media (max-width: $device-m) {
-  .LogoImage {
+  #LogoImage {
     width: 100px;
     float: left;
   }
@@ -274,10 +274,12 @@ button:hover, button:focus, {
       }
 
       .news-nav-prev:before {
+        font-family: "Font Awesome 5 Solid";
         content: "\f104";
         padding-right: 0.5em;
       }
       .news-nav-next:after {
+        font-family: "Font Awesome 5 Solid";
         content: "\f105";
         padding-left: 0.5em;
       }
@@ -308,6 +310,7 @@ ul.news-list {
   }
 
   .title:before {
+    font-family: "Font Awesome 5 Solid";
     content: "\f105";
     margin-right: 0.2em;
     transition: content 0.2;
