--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -11,8 +11,26 @@
 	h3 {
 		margin-bottom: 0px;
 	}
+
 	.event-item-info span {
 		margin-right: 0.5em;
+	}
+
+	.event-item-info span:before {
+		margin-right: 0.25em;
+		font-size: 0.8em;
+	}
+
+	.event-item-location:before {
+		content: "\f3c5";
+	}
+
+	.event-item-date:before {
+		content: "\f073";
+	}
+
+	.event-item-time:before {
+		content: "\f017";
 	}
 
 	.event-item-link span {
