--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -220,226 +220,35 @@
       }
 
     }
-
-
-
     
   }
-
-
-
-  // STRUCTURE
-  #Content > div {
-
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-
-    @media (min-width: $device-m) {
-      grid-template-columns: 3fr 2fr;
-      grid-column-gap: 20px;
-
-      #News {
-        grid-row-end: span 3;
-      }
-
-      #Events {
-        position: relative;
-        top: -60px;
-      }
-
-      #Spenden {
-        position: relative;
-        top: -20px;
-      }
-
-    }
-
-    @media (min-width: $device-l) {
-      grid-template-columns: 2fr 1fr;
-    }
-
-  }
-
-  // ====
-  // NEWS
-  // ====
-
-  #News {
-    padding: 60px 0;
-
-    .NewsFeed {
-      padding: 20px 0;
-      display: grid;
-      grid-row-gap: 40px;
-      margin-bottom: 40px;
-
-      article {
-
-        .gatsby-image-wrapper {
-          float: left;
-          margin-right: 20px;
-        }
-
-        @media (max-width: $device-m) {
-          .gatsby-image-wrapper {
-            float: none;
-            margin-right: 0;
-            width: 100%;
-          }
-        }
-
-        h4 {
-          color: $secondarycolor;
-          margin: 0;
-        }
-
-        img {
-          border-radius: $borderradius1;
-        }
-
-        a {
-          margin-left: 0.5em;
-        }
-      }
-    }
-
-    .button-primary {
-      margin-top: 40px;
-      background-color: #bbb;
-    }
-
-    .button-primary:hover,
-    .button-primary:focus,{
-      background-color: $secondarycolor;
-    }
-  }
-
-
-  .content-sidebar {
-    border-radius: $borderradius2;
-    padding: 40px 20px;
-
-    p, span, a, h3, time, div {
-      color: #fff;
-      text-decoration: none;
-    }
-
-    h3 {
-      margin-top: 0px;
-    }
-
-    .button-primary, .button-primary:hover,
-    .button-primary:focus, .button-primary:active {
-      background-color: #fff;
-    }
-
-    // hover / focus effect
-    .button-primary:hover, .button-primary:focus {
-      opacity: 0.85;
-    }
-  }
-
-  // ======
-  // EVENTS
-  // ======
-
-  #Events {
-    background-color: $secondarycolor;
-
-    .eventinfo {
-      width: 100%;
-      overflow-y: hidden;
-      margin: 20px 0;
-      cursor: pointer;
-
-      // display day and month in square
-      .eventdate {
-        float: left;
-        background-color: #fff;
-        border-radius: $borderradius2;
-        height: 60px;
-        width: 60px;
-        text-align: center;
-        padding-top: 9px;
-        box-sizing: border-box;
-        margin-right: 10px;
-        opacity: 1;
-        transition: opacity 0.15s;
-
-        span {
-          color: $secondarycolor;
-          display: block;
-          padding: 0;
-          margin: 0;
-        }
-
-        .eventday {
-          font-size: 20px;
-          font-weight: bold;
-        }
-
-        .eventmonth {
-          font-size: 15px;
-          font-weight: bold;
-        }
-      }
-
-      // display name and location and time
-      .eventcontent {
-
-        span, time {
-          margin: 0;
-          padding: 0;
-          border: 0;
-        }
-      
-        .eventtitle {
-          font-weight: bold;
-          display: block;
-        }
-
-        .eventtime {
-          padding-left: 0.5em;
-          margin-left: 0.5em;
-          border-left: #fff 1px solid; 
-        }
-
-      }
-
-    }
-
-    .eventsfeed {
-      margin-bottom: 40px;
-    }
-
-    .button-primary, .button-primary:hover,
-    .button-primary:focus, .button-primary:active {
-      color: $secondarycolor;
-    }
-
-    // hover / focus effect
-    .eventinfo:hover, .eventinfo:focus {
-      opacity: 0.85;
-    }
-
-
-  }
-
-  // =======
-  // Spenden
-  // =======
-
-  #Spenden {
-    background-color: $primarycolor;
-
-    .button-primary, .button-primary:hover,
-    .button-primary:focus, .button-primary:active {
-      color: $primarycolor;
-    }
-
-
-  }
 }
+
+
+#Content > div {
+
+  @media (min-width: $device-m) {
+
+    #EventsOverview {
+      position: relative;
+      top: -60px;
+    }
+
+    #GebetsanliegenOverview {
+      position: relative;
+      top: -40px;
+    }
+
+    #Spenden {
+      position: relative;
+      top: -20px;
+    }
+  }
+
+}
+
+
+
+
+
+ 
