--- a/src/styles/params.scss
+++ b/src/styles/params.scss
@@ -9,6 +9,7 @@ $primarycolor: #d9e021;
 $primarycolor2: #8e9437;
 $secondarycolor: #29abe2;
 $secondarycolor0: #77cedf;
+$grey1: #999;
 
 /* === Radius === */
 $borderradius1: 5px;
